# applied-programmierung-project

./: .gitignore  README.md  api_test.py  frontend.py  main.py  main_day_2.py  main_day_3.py  main_day_4.py  main_day_5.py  notes.db  pyproject.toml  test_notes.py  test_validation.py  work-log.md
data/: notes.json
exploration/: test-notes-jonas.py  test_notes.py  test_validation.py
